tests/NormalTests/paczka1/small_fuzzy/14065272.err
Error in line 6: Ld8OKi S514 20,5
Error in line 8: Ld8OKi A825 29,7
Error in line 5: VfTY0HOnCz S514 201,7
